# Worker-WebSocket

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  ws.rs
src/client/: mod.rs
src/executor/: mod.rs
src/models/: dsl_model.rs  metrics.rs  mod.rs
src/utils/: hardware.rs
