[package]
name = "Worker-Web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13" 
actix-web = "4.3"             
actix-web-actors = "4.3"      
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
sysinfo = "0.36.1"


